--- a/app/src/main/res/layout/fragment_home_tile_view.xml
+++ b/app/src/main/res/layout/fragment_home_tile_view.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/homeTileView">
+    android:id="@+id/homeTileView"
+    tools:context=".HomeTileViewFragment">
 
 
     <ScrollView
