--- a/app/src/main/res/layout/layout_a_tile.xml
+++ b/app/src/main/res/layout/layout_a_tile.xml
@@ -12,6 +12,7 @@
     android:layout_marginStart="40dp"
     android:layout_marginEnd="40dp"
     app:cardCornerRadius="20dp"
+    android:id="@+id/tileLayoutId"
     app:cardElevation="18dp"
     android:onClick="onLayoutClick_goto_view_tile"
     android:focusable="true"
