Sms service function on progress

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,24 +10,25 @@
 
   <TextView
       android:id="@+id/textView4"
-      android:layout_width="392dp"
-      android:layout_height="92dp"
+      android:layout_width="390dp"
+      android:layout_height="173dp"
+      android:gravity="center"
+      android:text="HELLO"
+      android:textAlignment="center"
+      android:textSize="65sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0"
-      android:text="HELLO"
-      android:textSize="35sp"
-      android:textAlignment="center"
-      android:gravity="center" />
+      app:layout_constraintVertical_bias="0.0" />
 
   <GridLayout
       android:layout_width="392dp"
       android:layout_height="637dp"
-      android:foregroundGravity="fill"
-      android:paddingTop="100dp"
+      android:foregroundGravity="center"
+      android:paddingTop="50dp"
+      android:textAlignment="center"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
@@ -41,7 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_margin="25dp"
+        android:layout_gravity="center"
+        android:layout_margin="30dp"
         android:elevation="10dp"
         android:focusable="true"
         android:gravity="center"
@@ -54,6 +56,7 @@
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:gravity="center"
           android:orientation="vertical">
 
         <ImageView
@@ -78,7 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_margin="25dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:elevation="10dp"
         android:focusable="true"
         android:gravity="center"
@@ -90,6 +94,7 @@
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:gravity="center"
           android:orientation="vertical">
 
         <ImageView
@@ -114,7 +119,8 @@
         android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_margin="25dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
         android:elevation="10dp"
         android:focusable="true"
         android:gravity="center"
@@ -126,6 +132,7 @@
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:gravity="center"
           android:orientation="vertical">
 
         <ImageView
@@ -150,7 +157,9 @@
         android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="1"
-        android:layout_margin="25dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="50dp"
         android:elevation="10dp"
         android:focusable="true"
         android:gravity="center"
@@ -160,8 +169,9 @@
         app:cardElevation="18dp">
 
       <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="146dp"
+          android:layout_height="match_parent"
+          android:gravity="center"
           android:orientation="vertical">
 
         <ImageView
