--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -52,6 +52,20 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtRegUsername" />
 
                 <EditText
+                    android:id="@+id/txtPhoneNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="Phone (without 0)"
+                    android:inputType="phone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegEmail" />
+
+                <EditText
                     android:id="@+id/txtRegPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -63,7 +77,7 @@
                     android:inputType="textPassword"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtRegEmail" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtPhoneNum" />
 
                 <EditText
                     android:id="@+id/txtRegPassword2"
