--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="36dp"
+                    android:layout_marginStart="37dp"
                     android:layout_marginTop="76dp"
                     android:text="Username: "
                     android:textSize="20sp"
@@ -73,8 +73,8 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginStart="37dp"
+                    android:layout_marginTop="44dp"
                     android:text="Email: "
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,10 +85,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="76dp"
+                    android:layout_marginEnd="76dp"
                     android:text="TextView"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.419"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -96,9 +97,8 @@
                     android:id="@+id/profileEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="96dp"
-                    android:layout_marginTop="36dp"
-                    android:layout_marginEnd="79dp"
+                    android:layout_marginTop="44dp"
+                    android:layout_marginEnd="76dp"
                     android:text="TextView"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +118,30 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView8"
                     app:layout_constraintTop_toBottomOf="@+id/profileEmail" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="37dp"
+                    android:layout_marginTop="44dp"
+                    android:text="Phone:"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+                <TextView
+                    android:id="@+id/profilePhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="98dp"
+                    android:layout_marginTop="44dp"
+                    android:layout_marginEnd="76dp"
+                    android:text="@string/textview"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/profileDob" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
