--- a/app/src/main/res/layout/activity_tile_view.xml
+++ b/app/src/main/res/layout/activity_tile_view.xml
@@ -47,11 +47,12 @@
                         android:id="@+id/dateTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="yyyy-mm-dd"/>
+                        android:text="yyyy-mm-dd"
+                        android:layout_marginStart="20dp"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="250dp">
+                        android:layout_marginStart="200dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
