--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -101,7 +101,7 @@
                     android:layout_marginTop="36dp"
                     android:layout_marginEnd="94dp"
                     android:ems="10"
-                    android:hint="YYYY/MM/DD"
+                    android:hint="YYYY/MM/DD (DOB)"
                     android:inputType="date"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
