--- a/app/src/main/res/layout/activity_tile_view.xml
+++ b/app/src/main/res/layout/activity_tile_view.xml
@@ -96,4 +96,21 @@
         android:focusable="true"
         android:contentDescription="@string/todo" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteContentFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:backgroundTint="@color/spetia"
+        app:elevation="20dp"
+        app:srcCompat="@drawable/baseline_delete_24"
+        android:focusable="true"
+        android:contentDescription="@string/todo" />
+
 </RelativeLayout>
