--- a/app/src/main/res/layout/activity_tile_view.xml
+++ b/app/src/main/res/layout/activity_tile_view.xml
@@ -27,6 +27,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
+                    android:id="@+id/tileViewImage"
                     android:layout_height="373dp"
                     android:src="@drawable/splash" />
 
