--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -23,15 +23,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="373dp"
-                    android:clickable="true"
                     android:id="@+id/imgContentJournal"
+                    android:layout_width="match_parent"
+                    android:layout_height="296dp"
+                    android:clickable="true"
 
                     android:src="@drawable/baseline_add_photo_alternate_24" />
+
+
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -108,6 +112,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:visibility="gone"/>
+
+<!--                <Button-->
+<!--                    android:id="@+id/mapActivityBtn"-->
+<!--                    android:layout_width="197dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="Get The Map Data"-->
+<!--                    android:layout_marginTop="10dp"/>-->
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
